[package]
name = "jbotci-syntax"
description = "Lojban syntax model and parser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
jbotci-morphology.workspace = true
jbotci-source.workspace = true

[lints]
workspace = true
